plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.colombia.eps'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven {
		url 'https://eps-colombia-730335582376.d.codeartifact.us-east-1.amazonaws.com/maven/librerias/'
		credentials {
			username "aws"
			password System.env.CODEARTIFACT_AUTH_TOKEN
		}
	}
}

dependencies {
	//generation-session
	implementation 'com.colombia.eps.library:generateSession:1.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	//mapstruct
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	//documentacion
	implementation "org.springdoc:springdoc-openapi-ui:1.6.9"
	//Feing
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
	//Dynamo
	implementation  'software.amazon.awssdk:dynamodb:2.20.43'
	implementation 'software.amazon.awssdk:dynamodb-enhanced:2.20.43'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
